# strands_movebase

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
calibrate_chest/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
calibrate_chest/action/: CalibrateCamera.action
calibrate_chest/src/: calibration_server.cpp  chest_calibration_publisher.cpp
launch/: amcl.launch  move_base.launch  move_base_3d.launch  nav.launch  scitos_2d_nav.launch
movebase_state_service/: CHANGELOG.rst  CMakeLists.txt  package.xml
movebase_state_service/src/: movebase_state_service.cpp
movebase_state_service/srv/: MovebaseStateService.srv
param_loader/: CHANGELOG.rst  CMakeLists.txt  package.xml
param_loader/config/: current_dwa.yaml  lincoln_dwa.yaml
param_loader/scripts/: param_loader.py
scitos_2d_navigation/launch/: amcl.launch  nav.launch  scitos_2d_nav.launch
scitos_2d_navigation_config/: CMakeLists.txt  package.xml
scitos_2d_navigation_config/scitos_move_base/: costmap_common_params.yaml
scitos_move_base_params/: costmap_common_params.yaml  dwa_planner_ros.yaml  global_costmap_params.yaml  local_costmap_params.yaml
scitos_move_base_params_3d/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  trajectory_planner_ros.yaml
src/: calibrate_chest.cpp  chest_calibration_publisher.cpp  mirror_floor_points.cpp  noise_approximate_voxel_grid.cpp  noise_approximate_voxel_grid.h  noise_voxel_grid.cpp  noise_voxel_grid.h  remove_edges_cloud.cpp  subsample_cloud.cpp  synthesize_wall_cloud.cpp
strands_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
strands_description/launch/: strands_state_publisher.launch
strands_description/urdf/: scitos_all_robot_model.xacro  scitos_chest_camera.xacro
strands_movebase/: CHANGELOG.rst  CMakeLists.txt  package.xml
strands_movebase/include/strands_movebase/: subsample_cloud_nodelet.h
strands_movebase/launch/: amcl.launch  config.launch  move_base.launch  move_base_3d.launch  movebase.launch  obstacles.launch
strands_movebase/plugins/: nodelet_plugins.xml
strands_movebase/src/: noise_approximate_voxel_grid.cpp  remove_edges_cloud.cpp  remove_edges_laser.cpp  subsample_cloud.cpp  subsample_cloud_nodelet.cpp
strands_movebase/strands_movebase_params/: costmap_common_params.yaml  dwa_planner_ros.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  nav_fn_ros.yaml
strands_navfn/: CHANGELOG.rst  CMakeLists.txt  bgp_plugin.xml  package.xml
strands_navfn/include/strands_navfn/: strands_navfn.h  strands_navfn_ros.h  strands_navwin.h  strands_potarr_point.h
strands_navfn/src/: strands_navfn.cpp  strands_navfn_node.cpp  strands_navfn_ros.cpp  strands_navtest.cpp  strands_navwin.cpp  strands_read_pgm_costmap.cpp
strands_navfn/test/: CMakeLists.txt  strands_path_calc_test.cpp
