<?xml version="1.0"?>
<package>
  <name>strands_movebase</name>
  <version>0.0.16</version>
  <description>
    This package contains components for using the ROS move base together
    with the Scitos G5 robot. There is options for running obstacle avoidance
    both with only laser and with an additional depth-sensing camera
    mounted in front. The additional nodes in the package are for processing
    the incoming clouds from the camera for obstacle avoidance.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="nilsbore@gmail.com">nbore</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://github.com/strands-project/strands_movebase</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="nilsbore@gmail.com">Nils Bore</author>
  <author email="b.lacerda@cs.bham.ac.uk">Bruno Lacerda</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>scitos_2d_navigation</run_depend>
  <run_depend>strands_description</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>map_server</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
